forEnersys/DavePkg/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Project Sales Process</fullName>
        <description>EnerSys Project Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Design</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Planning</fullName>
        </values>
        <values>
            <fullName>Proposal%2FQuote</fullName>
        </values>
        <values>
            <fullName>Specification Completed</fullName>
        </values>
        <values>
            <fullName>Testing</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Repeat Sales Process</fullName>
        <description>EnerSys Repeat Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Proposal%2FQuote</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard Sales Process</fullName>
        <description>EnerSys Standard Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Proposal%2FQuote</fullName>
        </values>
        <values>
            <fullName>Qualify</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Bill_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Bill To)</relationshipLabel>
        <relationshipName>Opportunities_Bill_To</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor_Lost_To__c</fullName>
        <label>Competitor Lost To</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>SBU__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Competitors</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <inlineHelpText>Select the competitors also bidding/quoting this opportunity</inlineHelpText>
        <label>Competitor(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>SBU__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Competitors</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End User</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Exec_Pipeline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from Pipeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <description>Industry value will be populated from the Quote when quote is marked as Primary Quote</description>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBU__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Industry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOB_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>LOB - will be populated from the Quote when quote is marked as Primary</description>
        <label>LOB</label>
        <referenceTo>LOB__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Inbound_Message__c</fullName>
        <description>Used for integration</description>
        <label>Last Inbound Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Inbound_Tag__c</fullName>
        <description>Used for integration</description>
        <label>Last Inbound Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Inbound_Time__c</fullName>
        <description>Used for integration</description>
        <label>Last Inbound Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Possible_Dup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Possible Dup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Quote_approved__c</fullName>
        <formula>OR( 
ISPICKVAL( SBQQ__PrimaryQuote__r.SBQQ__Status__c, &quot;Approved&quot;), 
ISPICKVAL( SBQQ__PrimaryQuote__r.SBQQ__Status__c, &quot;Accepted&quot;), 
ISPICKVAL( SBQQ__PrimaryQuote__r.SBQQ__Status__c, &quot;Presented&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Quote approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Project object to associate multiple opportunities to a related Project.</description>
        <inlineHelpText>If this opportunity is part of a larger project, you can lookup the Project and associate this opportunity here.</inlineHelpText>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendedContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the relationship to your Amended Contract.</description>
        <inlineHelpText>Lookup to your Amended Contract.</inlineHelpText>
        <label>Amended Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Amendment Opportunities</relationshipLabel>
        <relationshipName>AmendmentOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal flag used to kick off automatic asset and subscription conversion.</description>
        <inlineHelpText>Salesforce CPQ uses this field to automatically convert assets and subscriptions.</inlineHelpText>
        <label>Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CreateContractedPrices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this checkbox to create Contracted Prices without creating a Contract.</description>
        <inlineHelpText>Select this checkbox to create Contracted Prices without creating a Contract.</inlineHelpText>
        <label>Create Contracted Prices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Ordered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal flag that drives automatic order creation.</description>
        <inlineHelpText>Select this checkbox to automatically create an order from the primary quote.</inlineHelpText>
        <label>Ordered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PrimaryQuote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points to primary quote on this opportunity.</description>
        <inlineHelpText>Salesforce CPQ uses this to point to the primary quote on this opportunity.</inlineHelpText>
        <label>Primary Quote</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>SBQQ__Quote__c.SBQQ__Opportunity2__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>PrimaryOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuotePricebookId__c</fullName>
        <description>Custom pricebook ID field that updates the standard Pricebook2Id field. Use to automatically drive pricebook selection from workflow rules.</description>
        <label>Quote Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this opportunity is a renewal opportunity.</description>
        <inlineHelpText>Indicates this opportunity is a renewal opportunity.</inlineHelpText>
        <label>Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewedContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contract being renewed by this renewal opportunity. In case opportunity rolls up several contracts this points at the master contract.</description>
        <inlineHelpText>Contract being renewed by this renewal opportunity. If the several contracts roll up to this opportunity, this points at the master contract.</inlineHelpText>
        <label>Renewed Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Renewal Opportunities</relationshipLabel>
        <relationshipName>RenewalOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBU__c</fullName>
        <description>SBU will be populated from User</description>
        <label>SBU</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBU</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Area_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Area Data</label>
        <referenceTo>Sales_Area_data__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_To_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Data</label>
        <referenceTo>Ship_To_Data__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_Options__c</fullName>
        <description>Site Option value will be populated from the Quote when quote is marked as Primary Quote</description>
        <label>Site Options</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBU__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Site_Options</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Industry__c</fullName>
        <description>Sub-Industry is associated with Industry for RP</description>
        <label>Sub-Industry</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Sub_Industry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <description>Technology value will be populated from the Quote when quote is marked as Primary Quote</description>
        <label>Technology</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBU__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Technology</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Win_Loss_Reason__c</fullName>
        <label>Win/Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Competition</fullName>
                </value>
                <value>
                    <fullName>Leadtime</fullName>
                </value>
                <value>
                    <fullName>Personal Relationship</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Product Quality</fullName>
                </value>
                <value>
                    <fullName>Timing Consideration</fullName>
                </value>
                <value>
                    <fullName>Project Delays</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Project</fullName>
        <active>true</active>
        <businessProcess>Project Sales Process</businessProcess>
        <description>Project Opportunity</description>
        <label>Project</label>
    </recordTypes>
    <recordTypes>
        <fullName>Repeat</fullName>
        <active>true</active>
        <businessProcess>Repeat Sales Process</businessProcess>
        <description>Repeat Opportunity</description>
        <label>Repeat</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <businessProcess>Standard Sales Process</businessProcess>
        <description>Standard Opportunity</description>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Approved_primary_quote</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 

 IsWon = true ,
 
 NOT(Primary_Quote_approved__c )
)</errorConditionFormula>
        <errorMessage>Your Primary quote must be approved to move this record to WON</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Lost_Competitor</fullName>
        <active>true</active>
        <description>Must add the competitor when an opportunity is set to closed/lost</description>
        <errorConditionFormula>AND( ISPICKVAL(StageName, &apos;Closed Lost&apos;), 
NOT(ISPICKVAL(SBU__c , &apos;EAS&apos;)), 
ISBLANK(Competitor_Lost_To__c) )</errorConditionFormula>
        <errorDisplayField>Competitor_Lost_To__c</errorDisplayField>
        <errorMessage>Please select.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Reason</fullName>
        <active>true</active>
        <description>Select a closed lost or won reason</description>
        <errorConditionFormula>AND(
OR(
ISPICKVAL(StageName, &apos;Closed Won&apos;),
ISPICKVAL(StageName, &apos;Closed Lost&apos;)
), 
ISBLANK(TEXT(Win_Loss_Reason__c))
)</errorConditionFormula>
        <errorDisplayField>Win_Loss_Reason__c</errorDisplayField>
        <errorMessage>Please select.</errorMessage>
    </validationRules>
</CustomObject>